--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "aos": "^3.0.0-beta.6",
     "next": "^10.0.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sass": "^1.29.0"
   },
   "scripts": {
     "dev": "next",
